--- a/70_pf/tylenol/sec1.html
+++ b/70_pf/tylenol/sec1.html
@@ -70,7 +70,7 @@
                 <img src="./images/pill.png" alt="알약이미지">
             </div>
         </nav>
-    </div>
+    </div><!-- //.header navigation -->
 
 
     <section id="sec1">
@@ -103,7 +103,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section><!-- //.sec1 -->
     <section id="sec2"></section>
 
 </body>
