--- a/70_pf/todolist/index.html
+++ b/70_pf/todolist/index.html
@@ -13,7 +13,7 @@
     <style>
         body {
             font-family: "Pretendard Variable", sans-serif;
-            background-color: #f8f9fa;
+            background-color: #333;
         }
 
         .todo-container {
@@ -110,7 +110,7 @@
                         </div>
                         <div className="col-sm-3 col-12 d-grid text-center">
                             <button
-                                className="btn btn-primary equal-height"
+                                className="btn btn-danger equal-height"
                                 onClick={addTask}
                             >
                                 추가
