--- a/70_pf/tylenol/sub/cold.html
+++ b/70_pf/tylenol/sub/cold.html
@@ -4,13 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>타이레놀</title>
-    <link rel="stylesheet" href="./css/sec1.css">
+    <title>증상별가이드</title>
+    <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    <script src="./script/sec1.js"></script>
-    <script src="./script/header.js"></script>
-
+    <script src="../script/header.js"></script>
 </head>
 
 <body>
@@ -18,11 +16,11 @@
         <div class="header-container">
             <div class="logo">
                 <a href="#">
-                    <img src="./images/header/logo.png" alt="타이레놀 로고">
+                    <img src="../images/header/logo.png" alt="타이레놀 로고">
                 </a>
             </div>
             <div class="menu-icon" id="menuToggle">
-                <img src="./images/header/ham_btn.png" alt="햄버거버튼">
+                <img src="../images/header/ham_btn.png" alt="햄버거버튼">
             </div>
         </div>
     </header>
@@ -30,8 +28,8 @@
     <div class="overlay" id="overlay">
         <nav class="side-nav">
             <div class="nav-header">
-                <div class="logo1"><a href="#"><img src="./images/header/logo.png" alt="타이레놀 로고"></a></div>
-                <div class="close-btn" id="closeBtn"><img src="./images/header/ham_btn2.png" alt="햄버거버튼"></div>
+                <div class="logo1"><a href="#"><img src="../images/header/logo.png" alt="타이레놀 로고"></a></div>
+                <div class="close-btn" id="closeBtn"><img src="../images/header/ham_btn2.png" alt="햄버거버튼"></div>
             </div>
             <ul class="nav-list">
                 <li><a href="#">제품소개</a>
@@ -67,45 +65,10 @@
                 </li>
             </ul>
             <div class="pill">
-                <img src="./images/header/pill.png" alt="알약이미지">
+                <img src="../images/header/pill.png" alt="알약이미지">
             </div>
         </nav>
     </div><!-- //.header navigation -->
-
-
-    <section id="sec1">
-        <div class="sec1_slider">
-            <div class="sec1_container_1">
-                <div>
-                    <div class="img_1"><img src="./images/section1/main1.png" alt="타이레놀정500mg"></div>
-                    <h2 class="font_1">Quick &</h2>
-                    <h2 class="font_2">15 Min</h2>
-                    <h3 class="font_3">즉시 녹아 15분 만에 빠르게</h3>
-                    <h3 class="font_4">#타이레놀정500mg</h3>
-                </div>
-            </div>
-            <div class="sec1_container_2">
-                <div>
-                    <div class="img_1"><img src="./images/section1/main2.png" alt="타이레놀이알서방정"></div>
-                    <h2 class="font_1">Long &</h2>
-                    <h2 class="font_2">8 Hours</h2>
-                    <h3 class="font_3">근육통에 8시간 내내</h3>
-                    <h3 class="font_4">#타이레놀이알서방정</h3>
-                </div>
-            </div>
-            <div class="sec1_container_3">
-                <div>
-                    <div class="img_1"><img src="./images/section1/main3.png" alt="타이레놀콜드에스정"></div>
-                    <h2 class="font_1">6 Colds</h2>
-                    <h2 class="font_2">& 1 Pill</h2>
-                    <h3 class="font_3">6가지 감기 증상, 한 알로</h3>
-                    <h3 class="font_4">#타이레놀콜드에스정</h3>
-                </div>
-            </div>
-        </div>
-    </section><!-- //.sec1 -->
-    <section id="sec2"></section>
-
 </body>
 
 </html>
