--- a/70_pf/mysite2/index.html
+++ b/70_pf/mysite2/index.html
@@ -62,7 +62,12 @@
                     <div><img id="my_pic" src="images/10001.jpg" alt="내 사진"></div>
                 </div>
                 <p class="col">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt eaque fugiat dolorem voluptatem blanditiis officia quia ullam, molestiae quos a eum corrupti consequuntur modi harum optio nostrum cum! Explicabo eligendi sequi autem cupiditate iusto, aperiam impedit reprehenderit enim voluptatum quo delectus non veniam neque fugit. Id voluptas laborum sint, soluta iure ducimus quos adipisci saepe deleniti ex incidunt sapiente, eos natus facilis quae. Libero earum sapiente minus incidunt, ab ad.</p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt eaque fugiat dolorem voluptatem
+                    blanditiis officia quia ullam, molestiae quos a eum corrupti consequuntur modi harum optio nostrum
+                    cum! Explicabo eligendi sequi autem cupiditate iusto, aperiam impedit reprehenderit enim voluptatum
+                    quo delectus non veniam neque fugit. Id voluptas laborum sint, soluta iure ducimus quos adipisci
+                    saepe deleniti ex incidunt sapiente, eos natus facilis quae. Libero earum sapiente minus incidunt,
+                    ab ad.</p>
             </div>
             <p class="text-center mt-5 mb-2">I'm really good at:</p>
             <div id="skill" class="mb-5 pb-5">
@@ -91,22 +96,54 @@
         </div>
     </div>
     <!-- sec3 -->
-    <div id="sec3" class="container-fluid text-center py-5">
-        <div class="bg">
-            <h2>PORTPOLIO</h2>
+    <div id="sec3" class="container-fluid text-center px-0 pb-5">
+        <div class="parallax parallax_bg d-flex justify-content-center align-items-center">
+            <h2 class="text-white ls10 fs-1">PORTPOLIO</h2>
         </div>
-        <div class="container sec">
-            
+        <div class="container sec pt-5">
+            <div class="text-center pt-5">
+                <h3 class="mb-3">MY WORK</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, iste?</p>
+            </div>
         </div>
     </div>
     <!-- sec4 -->
     <div id="sec4" class="container sec">
-        <h2>CONTACT</h2>
-    </div>
-    <!-- footer -->
-
-
-    <footer></footer>
+        <div class="container sec pt-5">
+            <div class="text-center pt-5 pb-5">
+                <h3 class="mb-3">CONTACT</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, iste?</p>
+            </div>
+            <div class="row">
+                <div class="col-6">
+                    <img src="images/sec1_1.jpg" alt="작업장위치">
+                </div>
+                <div class="col-6">
+                    <div>
+                        <i class="fa-solid fa-location-dot"></i> 경기도; 대한민국<br>
+                        <i class="fa-solid fa-phone"></i> +82 01000000000<br>
+                        <i class="fa-solid fa-envelope"></i> Email: 123@www.rrr
+                    </div>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <form action="#">
+                        <input type="text" name="username" placeholder="이름을 입력하세요.">
+                        <input type="text" name="useremail" placeholder="이메일을 입력하세요.">
+                        <textarea name="message" placeholder="내용을 입력하세요.">
+                        <button type="submit"><i class="fa-solid fa-paper-plane"></i>메시지 보내기</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div><!-- //.se4 -->
+    <footer class="container-fluid py-5 bg-secondary text-center">
+        <a href="#top"><i class="fa fa-arrow-up"></i>위로가기</a>
+        <div>
+            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="#"><i class="fa-brands fa-pinterest"></i></a>
+            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+        </div>
+        <p>copyright 2025 KHK. All rights reserved.</p>
+    </footer>
 </body>
 
 </html>
