--- a/70_pf/tylenol/sub/headache.html
+++ b/70_pf/tylenol/sub/headache.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="../script/header.js"></script>
+    <script src="../script/sub_guide.js"></script>
 </head>
 
 <body>
@@ -42,10 +43,10 @@
                 <li><a href="#">증상별가이드</a>
                     <ul class="sub-list">
                         <li><a href="#">두통 </a></li>
-                        <li><a href="#">감기.독감 </a></li>
-                        <li><a href="#">몸살.근육통 </a></li>
-                        <li><a href="#">생리통 </a></li>
-                        <li><a href="#">치통.귀앓이 </a></li>
+                        <li><a href="#">감기 · 독감 </a></li>
+                        <li><a href="#">몸살 · 근육통 </a></li>
+                        <li><a href="#">우먼스케어 </a></li>
+                        <li><a href="#">열 · 귀앓이 </a></li>
                     </ul>
                 </li>
                 <li><a href="#">연령별가이드</a>
@@ -90,12 +91,12 @@
                 <div class="guide_title">
                     <h3>두통</h3>
                 </div>
-                <div class="tab_section">
+                <div id="whatHeadache" class="tab_section">
                     <div class="tabs">
-                        <button class="tab_button active" data-target="whatHeadache">두통의 원인</button>
-                        <button class="tab_button" data-target="authors">두통 완화법</button>
+                        <a href="#whatHeadache" class="tab_button active">두통의 원인</a>
+                        <a href="#headSolution" class="tab_button">두통 완화법</a>
                     </div>
-                    <div id="whatHeadache" class="tab-content active">
+                    <div class="tab-content">
                         <div class="guide_layout">
                             <div class="guide_left">
                                 <p class="guide_left_1">두통의 원인</p>
@@ -161,13 +162,72 @@
                         </div><!-- //.guide_layout -->
                     </div><!-- //.tab-content -->
                 </div>
-                <div class="tab_section">
+                <div id="headSolution" class="tab_section">
                     <div class="tabs">
-                        <button class="tab_button active" data-target="whatHeadache">두통의 원인</button>
-                        <button class="tab_button" data-target="headSolution">두통 완화법</button>
+                        <a href="#whatHeadache" class="tab_button">두통의 원인</a>
+                        <a href="#headSolution" class="tab_button active">두통 완화법</a>
                     </div>
-                    <div id="headSolution" class="tab-content active">
-                        <!-- 두통완화법 -->
+                    <div class="tab-content">
+                        <div class="guide_layout">
+                            <div class="guide_left">
+                                <p class="guide_left_1">두통 완화법</p>
+                                <p class="guide_left_2">두통을 완화하는<br>
+                                    일상 속 작은 습관</p>
+                                <p class="guide_left_3">잘 먹고 잘 쉬는것만으로 두통을 줄일 수 있습니다.</p>
+                            </div>
+                            <div class="guide_right">
+                                <div class="right_container">
+                                    <div class="right_box">
+                                        <p class="right_box_1">신체활동</p>
+                                        <p class="right_box_2">무리한 운동은 삼가세요.
+                                            격렬한 운동은 머리, 목, 두피의 혈관을 부풀게 해 운동성 두통을 유발할 수 있습니다.</p>
+                                    </div>
+                                    <div class="right_box">
+                                        <p class="right_box_1">운동부족</p>
+                                        <p class="right_box_2">지나치게 정적인 생활 습관도 두통을 유발할 수 있습니다. 운동 요법을 시작하거나 변경하기 전에 의사와
+                                            먼저 상의하세요.</p>
+                                    </div>
+                                    <div class="right_box">
+                                        <p class="right_box_1">자세</p>
+                                        <p class="right_box_2">바르게 앉은 자세는 혈액순환에 도움이 됩니다. 또한 책상에 오래 앉아 있었다면 가볍게 걸어 다니는 것이
+                                            좋습니다.</p>
+                                    </div>
+                                    <div class="right_box">
+                                        <p class="right_box_1">호르몬</p>
+                                        <p class="right_box_2">에스트로젠 수치가 떨어지면(특히 월경 직전) 두통이 발생할 확률이 높아집니다. 월경 주기를 기억해 미리
+                                            대비하세요.</p>
+                                    </div>
+                                    <div class="right_box">
+                                        <p class="right_box_1">음식</p>
+                                        <p class="right_box_2">특정 음식은 두통을 유발할 수 있는 신경 전달 물질을 분비합니다. 이러한 식품에는 아스파탐, 카페인,
+                                            초콜릿, 알코올, 치즈 등이 있습니다.</p>
+                                    </div>
+                                    <div class="right_box">
+                                        <p class="right_box_1">의약품</p>
+                                        <p class="right_box_2">일부 처방약은 두통을 유발할 가능성이 있습니다. 두통이 심해지는 느낌이 든다면 의사와 상의하세요.
+                                        </p>
+                                    </div>
+                                    <div class="right_box">
+                                        <p class="right_box_1">수면습관</p>
+                                        <p class="right_box_2">적당한 수준으로 충분한 수면을 취하세요. 또한 추운 장소에서 바르지 않은 자세로 잠들면 근육 경련을
+                                            유발할 수 있습니다.</p>
+                                    </div>
+                                    <div class="right_box">
+                                        <p class="right_box_1">소음</p>
+                                        <p class="right_box_2">시끄럽고 반복적인 소음 뿐만 아니라 낮고 지속적인 소음 또한 두통을 유발할 수 있습니다.</p>
+                                    </div>
+                                    <div class="right_box">
+                                        <p class="right_box_1">빛</p>
+                                        <p class="right_box_2">컴퓨터, 태양, 실내조명 등이 발산하는 강렬한 빛은 두통을 유발할 수 있습니다. 조도를 낮추고 탁상용
+                                            스탠드를 추가로 사용해보세요.</p>
+                                    </div>
+                                    <div class="right_box">
+                                        <p class="right_box_1">근심</p>
+                                        <p class="right_box_2">스트레스는 신체에 큰 부담으로 다가옵니다. 심호흡과 휴식, 가벼운 산책을 해보세요.</p>
+                                    </div>
+                                </div><!-- //.right_container -->
+                            </div><!-- //.guide_right -->
+                        </div><!-- //.guide_layout -->
                     </div>
                 </div>
             </div>
