--- a/70_pf/tylenol/sub/headache.html
+++ b/70_pf/tylenol/sub/headache.html
@@ -79,11 +79,11 @@
                 </div>
                 <div class="sub_menu">
                     <ul>
-                        <li><a href="#">두통</a></li>
-                        <li><a href="#">감기 · 독감</a></li>
-                        <li><a href="#">몸살 · 근육통</a></li>
-                        <li><a href="#">우먼스케어</a></li>
-                        <li><a href="#">열 · 귀앓이</a></li>
+                        <li><a href="./headache.html">두통</a></li>
+                        <li><a href="./cold.html">감기 · 독감</a></li>
+                        <li><a href="./myalgia.html">몸살 · 근육통</a></li>
+                        <li><a href="./cramps.html">우먼스케어</a></li>
+                        <li><a href="./heat.html">열 · 귀앓이</a></li>
                     </ul>
                 </div>
             </div>
