--- a/70_pf/tylenol/index.html
+++ b/70_pf/tylenol/index.html
@@ -44,10 +44,10 @@
                 <li><a href="#">증상별가이드</a>
                     <ul class="sub-list">
                         <li><a href="#">두통 </a></li>
-                        <li><a href="#">감기.독감 </a></li>
-                        <li><a href="#">몸살.근육통 </a></li>
-                        <li><a href="#">생리통 </a></li>
-                        <li><a href="#">치통.귀앓이 </a></li>
+                        <li><a href="#">감기 · 독감 </a></li>
+                        <li><a href="#">몸살 · 근육통 </a></li>
+                        <li><a href="#">우먼스케어 </a></li>
+                        <li><a href="#">열 · 귀앓이 </a></li>
                     </ul>
                 </li>
                 <li><a href="#">연령별가이드</a>
