--- a/70_pf/tylenol/sub/cold.html
+++ b/70_pf/tylenol/sub/cold.html
@@ -116,10 +116,44 @@
                                 </div>
                                 <div class="guide_right">
                                     <div class="right_container">
-                                        <div class="right_box">
-                                            <p class="right_box_1">신체활동</p>
-                                            <p class="right_box_2">무리한 운동은 삼가세요.
-                                                격렬한 운동은 머리, 목, 두피의 혈관을 부풀게 해 운동성 두통을 유발할 수 있습니다.</p>
+                                        <div class="right_box table">
+                                            <table class="cold_table">
+                                                <thead>
+                                                    <tr>
+                                                        <th></th>
+                                                        <th>감기</th>
+                                                        <th>독감</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    <tr data-title="정의">
+                                                        <td>정의</td>
+                                                        <td data-label="감기">다양한 불특정의 바이러스에 의해 코, 비강, 인후 등이 있는 상기도에 감염되는 질환</td>
+                                                        <td data-label="독감">특정 바이러스에 의해 코, 비강, 인후 등이 있는 상기도에 감염되는 질환</td>
+                                                    </tr>
+                                                    <tr data-title="초기증상">
+                                                        <td>초기증상</td>
+                                                        <td data-label="감기">목 따가움 증상과 코막힘 증상으로부터 시작되는 경우가 대부분이며, 기침과 미열 증상을 동반</td>
+                                                        <td data-label="독감">갑자기 시작되는 경우가 대부분이며 고열과 오한을 동반함. 독감에 걸린 아이가 느끼는 통증과 불편함이 더욱 큼.</td>
+                                                    </tr>
+                                                    <tr data-title="증상">
+                                                        <td>증상</td>
+                                                        <td data-label="감기">인후염,콧물, 코막힘,기침, 재채기,열</td>
+                                                        <td data-label="독감">열, 오한, 인후염, 콧물, 기침(주로 마른 기침), 코막힘, 전신의 통증 무기력감, 피로</td>
+                                                    </tr>
+                                                    <tr data-title="지속기간">
+                                                        <td>지속기간</td>
+                                                        <td data-label="감기">대체로 3~10일간 지속</td>
+                                                        <td data-label="독감">7~14일간 지속, 최대 3주까지 증상이 남아 있기도 함</td>
+                                                    </tr>
+                                                    <tr data-title="아이가 느끼는 증상">
+                                                        <td>아이의 증상</td>
+                                                        <td data-label="감기">영유아 - 코를 비비고 식욕이 줄어듦<br>이후 연령대 - 불편한 호흡, 코막힘 증상 호소</td>
+                                                        <td data-label="독감">영유아 - 아파 보이거나 짜증을 부리고 잠을 많이 자며 평소보다 식욕이 줄어듦<br>이후 연령대 - 피로를 느끼고 불편함을 호소
+목이 아프다고 불평하거나, 목이 아프다는 이유로 음식이나 음료의 섭취를 거부하기도 함</td>
+                                                    </tr>
+                                                </tbody>
+                                            </table>
                                         </div>
                                     </div><!-- //.right_container -->
                                 </div><!-- //.guide_right -->
@@ -151,7 +185,7 @@
                                     </div>
                                 </div>
                                 <div class="guide_right">
-                                    <div class="right_container head_solution">
+                                    <div class="right_container">
                                         <div class="right_box">
                                             <p class="right_box_1">급성비염(코감기)의 원인과 증상</p>
                                             <p class="right_box_2">급성비염은 대부분 바이러스 감염이 주요 원인입니다. 추운 날씨, 낮은 습도, 영양 부족, 과로,
@@ -214,7 +248,7 @@
                                     </div>
                                 </div>
                                 <div class="guide_right">
-                                    <div class="right_container head_solution">
+                                    <div class="right_container grid2_2">
                                         <div class="right_box">
                                             <p class="right_box_1">급성 기침</p>
                                             <p class="right_box_2">3주 이내로 지속되는 기침. 감기, 알레르기성 비염, 급성 세균성 기관지염, 만성 폐쇄성
@@ -229,7 +263,7 @@
                                             <p class="right_box_2">8주 이상 지속되는 기침. 콧물이 목 뒤로 넘어가 기관지를 자극하는 후비루증후군, 기관지 천식,
                                                 위식도 역류</p>
                                         </div>
-                                        <div class="right_box wide">
+                                        <div class="right_box">
                                             <p class="right_box_1">병원 진료를 받아야 할 때</p>
                                             <p class="right_box_2">① 기침이 3주 이상 지속되고 좋아지지 않을 때 <br>
                                                 ② 기침 시 변색된 가래나 피가 섞여 나올 때 <br>
@@ -278,7 +312,8 @@
                                         </div>
                                         <div class="right_box">
                                             <p class="right_box_1">청결과 환경</p>
-                                            <p class="right_box_2">귀가 후 몸을 깨끗하게 하며, 실내 청소를 자주 하고 공기가 건조하지 않게 환기를 충분히 해주어야 합니다.</p>
+                                            <p class="right_box_2">귀가 후 몸을 깨끗하게 하며, 실내 청소를 자주 하고 공기가 건조하지 않게 환기를 충분히
+                                                해주어야 합니다.</p>
                                         </div>
                                         <div class="right_box">
                                             <p class="right_box_1">물 섭취</p>
@@ -290,11 +325,13 @@
                                         </div>
                                         <div class="right_box">
                                             <p class="right_box_1">다양한 음식 섭취</p>
-                                            <p class="right_box_2">비타민 B와 C가 많이 함유되어 있는 음식을 충분히 섭취하여 면역력을 높여주는 것이 좋습니다.</p>
+                                            <p class="right_box_2">비타민 B와 C가 많이 함유되어 있는 음식을 충분히 섭취하여 면역력을 높여주는 것이 좋습니다.
+                                            </p>
                                         </div>
                                         <div class="right_box">
                                             <p class="right_box_1">규칙적인 운동</p>
-                                            <p class="right_box_2">자신의 몸이 힘들지 않을 정도의 가벼운 운동은 우리 몸의 면역력을 증가시켜주고 숙면에 도움이 됩니다.</p>
+                                            <p class="right_box_2">자신의 몸이 힘들지 않을 정도의 가벼운 운동은 우리 몸의 면역력을 증가시켜주고 숙면에 도움이
+                                                됩니다.</p>
                                         </div>
                                     </div><!-- //.right_container -->
                                 </div><!-- //.guide_right -->
