--- a/70_pf/tylenol/sub/myalgia.html
+++ b/70_pf/tylenol/sub/myalgia.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>몸살, 근육통</title>
+    <title>몸살 · 근육통</title>
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
@@ -42,10 +42,10 @@
                 <li><a href="#">증상별가이드</a>
                     <ul class="sub-list">
                         <li><a href="#">두통 </a></li>
-                        <li><a href="#">감기.독감 </a></li>
-                        <li><a href="#">몸살.근육통 </a></li>
-                        <li><a href="#">생리통 </a></li>
-                        <li><a href="#">치통.귀앓이 </a></li>
+                        <li><a href="#">감기 · 독감 </a></li>
+                        <li><a href="#">몸살 · 근육통 </a></li>
+                        <li><a href="#">우먼스케어 </a></li>
+                        <li><a href="#">열 · 귀앓이 </a></li>
                     </ul>
                 </li>
                 <li><a href="#">연령별가이드</a>
