--- a/70_pf/hubble_react/public/index.html
+++ b/70_pf/hubble_react/public/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>hubble</title>
+  <title>GWBC</title>
 </head>
 
 <body>
