--- a/70_pf/mysite2_bk/index.html
+++ b/70_pf/mysite2_bk/index.html
@@ -49,7 +49,8 @@
     <!-- section1: First Parallax Image with Logo Text -->
     <div id="sec1" class="container-fluid">
         <div class="row justify-content-center align-items-center h-100">
-            <h1 class="text-center"><span class="bg-dark text-white fs-4 ls10 py-3 px-5">MY <span class="d-none d-sm-inline">WEBSITE</span> LOGO</span></h1>
+            <h1 class="text-center"><span class="bg-dark text-white fs-4 ls10 py-3 px-5">MY <span
+                        class="d-none d-sm-inline">WEBSITE</span> LOGO</span></h1>
         </div>
     </div>
 
@@ -63,27 +64,28 @@
         <div class="container sec">
 
             <!-- basic profile -->
-            <p>무대 밖에서는 조용히 배우고 성장하는 시간이 더 소중하게 느껴집니다.
-                틈날 때마다 풍경과 일상을 사진으로 기록하며, 저만의 감각을 다듬어가고 있어요.
-                이런 시각적인 관심은 자연스럽게 UI/UX에 대한 흥미로 이어졌고,
-                더 많은 분들과 더 나은 경험을 나누고 싶다는 마음으로 웹 프론트엔드 개발 공부를 시작하게 되었습니다.
-
-                지금은 HTML, CSS, JavaScript를 비롯해 React 등 다양한 프론트엔드 기술을 하나씩 익히며
-                디자인과 기능이 조화를 이루는 웹을 만들기 위해 노력하고 있습니다.
-                이 웹사이트는 저의 사진과 개발 과정을 함께 담은 공간으로,
-                무대 위의 저와는 또 다른, 조금 더 진솔한 저를 만날 수 있는 곳이기도 해요.
-                천천히, 꾸준히 채워가 보겠습니다.</p>
-            <div class="row">
-                <div class="col-sm text-center mb-5">
-                    <b class="my-5 my-lg-0 d-block"><i class="fa-solid fa-user-tie me-2"></i> 공유</b>
-                    <div id="my_pic"><img src="images/avatar_hat.jpg" alt="내 사진" class="w-100"></div>
+            <div class="overflow-hidden">
+                <p>무대 밖에서는 조용히 배우고 성장하는 시간이 더 소중하게 느껴집니다.
+                    틈날 때마다 풍경과 일상을 사진으로 기록하며, 저만의 감각을 다듬어가고 있어요.
+                    이런 시각적인 관심은 자연스럽게 UI/UX에 대한 흥미로 이어졌고,
+                    더 많은 분들과 더 나은 경험을 나누고 싶다는 마음으로 웹 프론트엔드 개발 공부를 시작하게 되었습니다.
+                    지금은 HTML, CSS, JavaScript를 비롯해 React 등 다양한 프론트엔드 기술을 하나씩 익히며
+                    디자인과 기능이 조화를 이루는 웹을 만들기 위해 노력하고 있습니다.
+                    이 웹사이트는 저의 사진과 개발 과정을 함께 담은 공간으로,
+                    무대 위의 저와는 또 다른, 조금 더 진솔한 저를 만날 수 있는 곳이기도 해요.
+                    천천히, 꾸준히 채워가 보겠습니다.</p>
+                <div class="row">
+                    <div class="col-sm text-center mb-5">
+                        <b class="my-5 my-lg-0 d-block"><i class="fa-solid fa-user-tie me-2"></i> 공유</b>
+                        <div id="my_pic" class="motion"><img src="images/avatar_hat.jpg" alt="내 사진" class="w-100"></div>
+                    </div>
+                    <p class="col-sm motion">안녕하세요! 제 웹사이트에 방문해 주셔서 진심으로 감사합니다.
+                        저는 배우로 활동하며, 다양한 역할 속에서 끊임없이 저 자신을 탐색하고 표현하는 일을 하고 있습니다.
+                        무대 위에서의 찰나의 순간들도 소중하지만, 그만큼 일상에서의 조용한 시간도 저에게는 매우 특별한 의미를 갖고 있어요. 그래서 저는 연기 외에도 다양한 방식으로 스스로를 표현하고
+                        싶었고, 그중 하나가 바로 사진과 웹이라는 새로운 영역이었습니다. 앞으로 이곳에는 제가 도전하는 다양한 프로젝트, 사진 작업, 그리고 느낀 점들을 차곡차곡 쌓아갈 예정입니다. 아직
+                        많이 부족하지만, 꾸준히 성장해 나가는 모습을 함께 지켜봐 주시면 감사하겠습니다.
+                        방문해 주셔서 다시 한 번 감사드리며, 자주 들러 주세요. :)</p>
                 </div>
-                <p class="col-sm">안녕하세요! 제 웹사이트에 방문해 주셔서 진심으로 감사합니다.
-                    저는 배우로 활동하며, 다양한 역할 속에서 끊임없이 저 자신을 탐색하고 표현하는 일을 하고 있습니다.
-                    무대 위에서의 찰나의 순간들도 소중하지만, 그만큼 일상에서의 조용한 시간도 저에게는 매우 특별한 의미를 갖고 있어요. 그래서 저는 연기 외에도 다양한 방식으로 스스로를 표현하고
-                    싶었고, 그중 하나가 바로 사진과 웹이라는 새로운 영역이었습니다. 앞으로 이곳에는 제가 도전하는 다양한 프로젝트, 사진 작업, 그리고 느낀 점들을 차곡차곡 쌓아갈 예정입니다. 아직
-                    많이 부족하지만, 꾸준히 성장해 나가는 모습을 함께 지켜봐 주시면 감사하겠습니다.
-                    방문해 주셔서 다시 한 번 감사드리며, 자주 들러 주세요. :)</p>
             </div>
 
             <!-- skill progressbar -->
@@ -139,28 +141,29 @@
             </div>
             <div class="row">
                 <a href="images/project/steam.png" class="col-sm-6 col-lg-3 p-3 p-lg-2" data-lightbox="gallery"
-                    data-title='<a href="https://junhuyk.netlify.app/" target="_blank" style="color:yellow; text-decoration:underline;">웹사이트 방문하기</a>'><img class="border border-secondary border-2" src="images/p1.jpg"
-                        alt="stream"></a>
-                <a href="images/project/srt.png" class="col-sm-6 col-lg-3 p-3 p-lg-2" data-lightbox="gallery" data-title='<a href="https://surimshim.netlify.app/" target="_blank" style="color:yellow; text-decoration:underline;">웹사이트 방문하기</a>'><img
+                    data-title='<a href="https://junhuyk.netlify.app/" target="_blank" style="color:yellow; text-decoration:underline;">웹사이트 방문하기</a>'><img
+                        class="border border-secondary border-2" src="images/p1.jpg" alt="stream"></a>
+                <a href="images/project/srt.png" class="col-sm-6 col-lg-3 p-3 p-lg-2" data-lightbox="gallery"
+                    data-title='<a href="https://surimshim.netlify.app/" target="_blank" style="color:yellow; text-decoration:underline;">웹사이트 방문하기</a>'><img
                         class="border border-secondary border-2" src="images/p2.jpg" alt="SRT"></a>
                 <a href="images/project/hyundai.png" class="col-sm-6 col-lg-3 p-3 p-lg-2" data-lightbox="gallery"
-                     data-title='<a href="https://example.com" target="_blank" style="color:yellow; text-decoration:underline;">웹사이트 방문하기</a>'><img class="border border-secondary border-2" src="images/p3.jpg"
-                        alt="Hyundai"></a>
+                    data-title='<a href="https://example.com" target="_blank" style="color:yellow; text-decoration:underline;">웹사이트 방문하기</a>'><img
+                        class="border border-secondary border-2" src="images/p3.jpg" alt="Hyundai"></a>
                 <a href="images/project/hanyang.png" class="col-sm-6 col-lg-3 p-3 p-lg-2" data-lightbox="gallery"
-                     data-title='<a href="https://example.com" target="_blank" style="color:yellow; text-decoration:underline;">웹사이트 방문하기</a>'><img class="border border-secondary border-2" src="images/p4.jpg"
-                        alt="Hanyang"></a>
+                    data-title='<a href="https://example.com" target="_blank" style="color:yellow; text-decoration:underline;">웹사이트 방문하기</a>'><img
+                        class="border border-secondary border-2" src="images/p4.jpg" alt="Hanyang"></a>
                 <a href="images/project/hanatour.png" class="col-sm-6 col-lg-3 p-3 p-lg-2" data-lightbox="gallery"
-                     data-title='<a href="https://example.com" target="_blank" style="color:yellow; text-decoration:underline;">웹사이트 방문하기</a>'><img class="border border-secondary border-2" src="images/p5.jpg"
-                        alt="Hanatour"></a>
+                    data-title='<a href="https://example.com" target="_blank" style="color:yellow; text-decoration:underline;">웹사이트 방문하기</a>'><img
+                        class="border border-secondary border-2" src="images/p5.jpg" alt="Hanatour"></a>
                 <a href="images/project/daewooenc.png" class="col-sm-6 col-lg-3 p-3 p-lg-2" data-lightbox="gallery"
-                     data-title='<a href="https://example.com" target="_blank" style="color:yellow; text-decoration:underline;">웹사이트 방문하기</a>'><img class="border border-secondary border-2" src="images/p6.jpg"
-                        alt="Daewoo"></a>
+                    data-title='<a href="https://example.com" target="_blank" style="color:yellow; text-decoration:underline;">웹사이트 방문하기</a>'><img
+                        class="border border-secondary border-2" src="images/p6.jpg" alt="Daewoo"></a>
                 <a href="images/project/tomntoms.png" class="col-sm-6 col-lg-3 p-3 p-lg-2" data-lightbox="gallery"
-                     data-title='<a href="https://example.com" target="_blank" style="color:yellow; text-decoration:underline;">웹사이트 방문하기</a>'><img class="border border-secondary border-2" src="images/p7.jpg"
-                        alt="Tomntoms"></a>
+                    data-title='<a href="https://example.com" target="_blank" style="color:yellow; text-decoration:underline;">웹사이트 방문하기</a>'><img
+                        class="border border-secondary border-2" src="images/p7.jpg" alt="Tomntoms"></a>
                 <a href="images/project/nongshim.png" class="col-sm-6 col-lg-3 p-3 p-lg-2" data-lightbox="gallery"
-                     data-title='<a href="https://example.com" target="_blank" style="color:yellow; text-decoration:underline;">웹사이트 방문하기</a>'><img class="border border-secondary border-2" src="images/p8.jpg"
-                        alt="Nongshim"></a>
+                    data-title='<a href="https://example.com" target="_blank" style="color:yellow; text-decoration:underline;">웹사이트 방문하기</a>'><img
+                        class="border border-secondary border-2" src="images/p8.jpg" alt="Nongshim"></a>
             </div>
             <div class="text-center my-5"><button type="button" class="btn btn-danger px-5">더보기</button></div>
         </div>
@@ -216,10 +219,20 @@
 
 
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <!-- jQuery 3.x -->
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"
+        integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <!-- jQuery UI 1.x -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js"></script>
     <!-- Lightbox2 JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.5/js/lightbox.min.js"></script>
+    <!-- Waypoint 4 -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.js"></script>
+    <!-- animateNumber -->
+    <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/jquery-animateNumber/0.0.14/jquery.animateNumber.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/scrollmotion.js"></script>
 </body>
 
 </html>
